# Project-Photon

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  photon.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
photon/: __init__.py  __main__.py
photon/core/: __init__.py  catalog.py  fits_loader.py  photometry.py  plate_solver.py  session.py  settings_manager.py  star_detector.py  transit.py
photon/ui/: __init__.py  background_widget.py  bottom_bar.py  fits_canvas.py  glass_panel.py  inspector_panel.py  light_curve_panel.py  main_window.py  photometry_panel.py  pipeline_stepper.py  session_sidebar.py  settings_window.py  theme.py  transit_panel.py
photon/utils/: __init__.py  stretch.py
photon/workers/: __init__.py  base_worker.py  catalog_worker.py  fits_worker.py  photometry_worker.py  plate_solve_worker.py  star_detection_worker.py
scripts/: build_windows.bat  generate_icon.py
tests/: conftest.py  test_fits_loader.py  test_photometry.py  test_session.py
