[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photon-astro"
version = "0.1.0"
description = "Desktop application for astrophotography science analysis"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "PySide6>=6.7",
    "astropy>=6.0",
    "photutils>=1.13",
    "astroquery>=0.4.7",
    "lightkurve>=2.4",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "Pillow>=10.0",
    "pyinstaller>=6.0",
]

# Install this group only when writing/running UI widget tests that need
# a real (or offscreen) Qt display.  Requires PySide6 to be importable.
ui-test = [
    "pytest-qt>=4.4",
]

[project.scripts]
photon = "photon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["photon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
